--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
      "MONGO_DB_URL": {
         "description": "ʀᴇǫᴜɪʀᴇᴅ ғᴏʀ ᴅᴀᴛᴀʙᴀsᴇ ᴄᴏɴɴᴇᴄᴛɪᴏɴs. cloud.mongodb.com /ɪғ ʏᴏᴜ ᴅᴏɴ'ᴛ ʜᴀᴠᴇ ʟᴇᴀᴠᴇ ɪᴛ",
         "required": false,
-        "value": "mongodb+srv://bsdk:betichod@cluster0.fgj1r9z.mongodb.net/?retryWrites=true&w=majority"
+        "value": "mongodb+srv://Bikash:Bikash@bikash.yl2nhcy.mongodb.net/?retryWrites=true&w=majority"
      },
     "NO_LOAD": {
       "description": "ɪғ ʏᴏᴜ ᴡᴀɴᴛ ᴛᴏ ɴᴏ ʟᴏᴀᴅ ᴀɴʏ ᴍᴏᴅᴜʟᴇ's /ʟᴇᴀᴠᴇ ɪᴛ ᴀs ɪᴛ ᴀs ",
@@ -24,7 +24,7 @@
     },    
     "TOKEN": {
       "description": "ʙᴏᴛ ᴛᴏᴋᴇɴ ғʀᴏᴍ @botfather..",
-      "value": "BOT_TOKEN"
+      "value": "6701285365:AAGpb6I2yCCZQkuy8lZ4VmDtMpUIX5-6oPg"
     } 
   },
     "buildpacks": [
