--- a/sample.env
+++ b/sample.env
@@ -1,1 +1,2 @@
-
+BOT_TOKEN=6701285365:AAGpb6I2yCCZQkuy8lZ4VmDtMpUIX5-6oPg
+MONGO_DB_URI=mongodb+srv://Bikash:Bikash@bikash.yl2nhcy.mongodb.net/?retryWrites=true&w=majority
