--- a/sample.env
+++ b/sample.env
@@ -1,2 +1,2 @@
-BOT_TOKEN=6701285365:AAGpb6I2yCCZQkuy8lZ4VmDtMpUIX5-6oPg
-MONGO_DB_URI=mongodb+srv://Bikash:Bikash@bikash.yl2nhcy.mongodb.net/?retryWrites=true&w=majority
+BOT_TOKEN=7204172210:AAFk3cTpI2V0HQhiYCzQ2ScM3HE4exL4u5c
+MONGO_DB_URI=mongodb+srv://devilkingp0404:devilkingp0404@cluster0.iw04afs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
